# karate_robot

./: .dockerignore  .gitignore  check_training.sh
cad/: README.md  detail_params.yaml  export_config.json  export_config.yaml  (+2 more)
simulation/ros2/karate_robot_bridge/: README.md  package.xml  setup.cfg  setup.py
simulation/ros2/karate_robot_bridge/config/: training_schema.yaml  walk_reward_profiles.yaml
simulation/ros2/karate_robot_bridge/karate_robot_bridge/: contact_bool_node.py  desired_pose_joint_state.py  domain_randomization.py  evaluate_policy.py  kick_loop_node.py  kick_sequence_node.py  policy_runner_node.py  reflex_guard.py  register_bridge.py  rl_trainer_node.py  sensor_watchdog_node.py  start_pose_publisher.py  strategist_node.py  training_agent_node.py  training_env_node.py
simulation/ros2/karate_robot_bridge/test/: test_training_schema.py
simulation/ros2/karate_robot_sim/: package.xml  setup.cfg  setup.py
simulation/ros2/karate_robot_sim/config/: ros2_controllers.yaml
simulation/ros2/karate_robot_sim/karate_robot_sim/: model_checks.py  smoke_sim.py  test_left_arm_publisher.py
simulation/ros2/karate_robot_sim/launch/: sensei_control_min.launch.py  sensei_evaluate.launch.py  sensei_gazebo.launch.py  sensei_kick_loop.launch.py  sensei_phase0.launch.py  sensei_phase1.launch.py  sensei_phase2.launch.py  sensei_phase3.launch.py  sensei_phase4.launch.py  sensei_phase5.launch.py  sensei_phase6.launch.py  sensei_rviz.launch.py  sensei_start_pose.launch.py  sensei_static_rviz.launch.py  sensei_walk_eval_gz.launch.py  sensei_walk_train.launch.py  sensei_walk_train_gz.launch.py  sensei_walk_train_long.launch.py  sensei_walk_train_short.launch.py
simulation/ros2/karate_robot_sim/rviz/: sensei.rviz
simulation/ros2/karate_robot_sim/test/: test_launch_files.py  test_model_consistency.py
simulation/ros2/karate_robot_sim/urdf/: sensei_arm_right.urdf.xacro
(+76 files in other folders)
