<?xml version="1.0"?>
<package format="3">
  <name>karate_robot_bridge</name>
  <version>0.1.0</version>
  <description>Bridge between strategist intent and simulated actuation.</description>
  <maintainer email="dev@karate-robot.local">karate_robot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
